recept.css
/*html style*/
html {
  background-color: rgba(161, 0, 0, 0.3);
  display: flex;
  justify-content: center;
  width: 100vw;

}

/**Body style*/

body {
  background-color: #FFFFFF;
  color:#000000;
  font-family: 'Open Sans', sans-serif;
  max-width: 75vw;
  
  display: flex;
  flex-direction: column;
  
  
}


/*P style under titel*/
p.grey {
  background-color: #EBEBEB;
  padding: 16px;
  gap: 10px;
  
}

/*h styles and remove padding and margin to keep only 48px between title and image*/
h1 {
    color: #A10000;
    font-size: 28px;
    font-weight: 700;
    padding-top: 0px;
    margin-top: 0px;
}

/*div style*/

.content {
    padding: 48px 48px 64px 48px;
}


/*image styles*/
.header-image {
    max-width: 100vw;
    
    border: 1px;
}

.footer-images {
    display: flex;
    gap: 16px;
}

.footer-images img {
    
    max-width: 50%;
    max-height: 516px;

}


/* media queries */
@media (max-width: 600px) {
  html {
    flex-direction: column;
  }

  body {
    max-width: 100vw;
    margin: 0;
    
  }
  .content {
    padding: 48px 16px 64px 16px;
}
  .footer-images {
    flex-direction: column;
  }
  .footer-images img {
    
    max-width: 100%;
    max-height: 516px;

}


}

